--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "autocannon": "^7.15.0",
     "bing-translate-api": "^4.0.1",
+    "cloudinary": "^2.3.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "http-proxy-agent": "^7.0.2",
+    "languagedetect": "^2.0.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
