--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "dev": "nodemon dist/app.js",
-    "dev1": "concurrently \"npm run watch\" \"npm run dev\""
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "ts-node-dev": "^2.0.0",
     "url": "^0.11.3",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
@@ -39,6 +41,13 @@
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.8",
-    "nodemon": "^3.0.3"
-  }
+    "nodemon": "^3.0.3",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1"
+  },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ]
 }
