--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "moduleResolution": "NodeNext",                     
     "outDir": "./dist",                                  
     "strict": true,                                      
-  }
+  },
+  "include": ["./src/**/*"]
 }
