--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
   "dependencies": {
     "@vitalets/google-translate-api": "^9.2.0",
     "autocannon": "^7.15.0",
+    "axios": "^1.7.7",
     "bing-translate-api": "^4.0.1",
-    "cloudinary": "^2.3.0",
+    "cloudinary": "^2.5.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-proxy-agent": "^7.0.2",
     "languagedetect": "^2.0.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "streamifier": "^0.1.1",
     "ts-node-dev": "^2.0.0",
     "url": "^0.11.3",
     "uuid": "^9.0.1",
@@ -38,6 +40,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.16",
     "@types/node-fetch": "^2.6.11",
+    "@types/streamifier": "^0.1.2",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.8",
